--- a/index.html
+++ b/index.html
@@ -7,4 +7,6 @@
     <li>Second thing</li>
     <li>THird thing</li>
   </ol>
+  <b>THIS IS FOR REDIRECTING USE ONLY</b>
+  <a href="https://codingspace.neocities.org">This is my second redirecting website</a>
 </html>
