--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+  <head>
+    <title>Second website for redirecting</title>
+  </head>
+  <body>
   <b>this is bold</b>
   <i>this is italic</i>
   <u>and this is underline</u><br>
@@ -9,4 +13,5 @@
   </ol>
   <b>THIS IS FOR REDIRECTING USE ONLY</b>
   <a href="https://codingspace.neocities.org">This is my second redirecting website</a>
+  </body>
 </html>
