--- a/index.html
+++ b/index.html
@@ -1,17 +1,68 @@
-<html>
-  <head>
-    <title>Second website for redirecting</title>
-  </head>
-  <body>
-  <b>this is bold</b>
-  <i>this is italic</i>
-  <u>and this is underline</u><br>
-  <ol>
-    <li>First thing</li>
-    <li>Second thing</li>
-    <li>THird thing</li>
-  </ol>
-  <b>THIS IS FOR REDIRECTING USE ONLY</b>
-  <a href="https://codingspace.neocities.org">This is my second redirecting website</a>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Link Hub</title>
+    <style>
+        body {
+            background: #f8f9fa;
+            font-family: 'Segoe UI', Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            max-width: 500px;
+            margin: 60px auto;
+            background: #fff;
+            box-shadow: 0 4px 24px rgba(0,0,0,0.07);
+            border-radius: 12px;
+            padding: 36px 24px 24px 24px;
+        }
+        h1 {
+            text-align: center;
+            color: #22223b;
+            margin-bottom: 28px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin: 18px 0;
+        }
+        a {
+            display: block;
+            text-decoration: none;
+            color: #3a5a40;
+            background: #e9ecef;
+            padding: 16px;
+            border-radius: 8px;
+            transition: background 0.18s, color 0.18s;
+            font-size: 1.1em;
+            font-weight: 500;
+        }
+        a:hover {
+            background: #a3b18a;
+            color: #fff;
+        }
+        .footer {
+            text-align: center;
+            margin-top: 40px;
+            color: #888;
+            font-size: 0.95em;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Link Hub</h1>
+        <ul>
+            <li><a href="https://www.github.com/RCprogramming6253" target="_blank">GitHub</a></li>
+            <li><a href="https://www.instagram.com/programmingstuff1210" target="_blank">Instagram</a></li>
+            <li><a href="https://www2.csklsc.edu.hk/portal" target="_blank">School staff portal</a></li>
+            <li><a href="https://www2.csklsc.edu.hk/student" target="_blank">School student portal</a></li>
+            <li><a href="https://www.fungkei.edu.hk" target="_blank">Primary school website</a></li>
+        </ul>
+</body>
 </html>
